--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -22,7 +22,7 @@
         <h3 class="text-muted">ChatApp</h3>
       </div>
 
-      <div class="container">
+      <div class="fluid">
         <div class="col-lg-12 content">
           <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
