--- a/public/css/style.css
+++ b/public/css/style.css
@@ -99,7 +99,7 @@ footer{
 
 .chat-section {
   width: 100%;
-  max-height: 250px;
+  max-height: 450px;
   border: 1px solid #aaa;
   padding: 10px;
   min-height: 100px;
@@ -107,14 +107,34 @@ footer{
 
 .chat {
   width: 100%;
-  max-height: 250px;
-  border: 1px solid #aaa;
-  padding: 10px;
-  min-height: 100px;
+    max-height: 250px;
+    border: 1px solid #ddd;
+    padding: 10px;
+    min-height: 100px;
+    height: 500px;
 }
 
 .chat-msgs{
-  height: 100px;
-  max-height: 100px;
+  height: 200px;
+  max-height: 200px;
   overflow-y: auto;
+}
+
+.user {
+  display: inline-block;
+  width: 100%;
+}
+
+#chatMessages :nth-child(even){
+  background-color: #b6f50a;
+}
+#chatMessages :nth-child(odd){
+  background-color: #21dcf5;
+  text-align: right;
+}
+
+.chat_row {
+  margin: 3px;
+  padding: 5px;
+  border-radius: 10px;
 }
